// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic class selector 1`] = `
"
myButton : Style
myButton =
    Css.batch
        [ color white
        ]
"
`;

exports[`nested class selectors 1`] = `
"
myButton : Style
myButton =
    Css.batch
        [ color white
        , Global.descendants <| List.singleton <| Global.class \\"myButtonDetail\\" 
        [ color black
        ]

        ]
"
`;

exports[`readme content nested 1`] = `
"
trainingWorkflows : Style
trainingWorkflows =
    Css.batch
        [ padding2 (px 30) (px 20)
        , textAlign center
        , width workflowColumnWidth
        , backgroundColor (hex \\"f8fbff\\")
        , borderRight3 (px 1) solid zapticGrey6
        , Global.descendants <| List.singleton <| Global.typeSelector \\"h2\\"
        [ fontSize (px 16)
        , padding4 (px 25) (px 20) (px 20) (px 20)
        , margin zero
        , borderBottom3 (px 1) solid zapticGrey5
        ]

        , Global.descendants <| List.singleton <| Global.children Global.typeSelector \\"ul\\"
        [ padding zero
        , margin zero
        , width (pct 100)
        ]

        ]
"
`;

exports[`readme content unnested 1`] = `
"
trainingWorkflows : Style
trainingWorkflows =
    Css.batch
        [
        ]
,padding2 = (px 30) (px 20),textAlign = center,width = workflowColumnWidth,backgroundColor = (hex \\"f8fbff\\"),borderRight3 = (px 1) solid zapticGrey6,
trainingWorkflowsH2 : Style
trainingWorkflowsH2 =
    Css.batch
        [
        ]
,fontSize = (px 16),padding4 = (px 25) (px 20) (px 20) (px 20),margin = zero,borderBottom3 = (px 1) solid zapticGrey5,
trainingWorkflowsUl : Style
trainingWorkflowsUl =
    Css.batch
        [
        ]
,padding = zero,margin = zero,width = (pct 100)"
`;
